Modified: Revision Firebase 1

--- a/test.html
+++ b/test.html
@@ -46,7 +46,7 @@
     <h1>www playground:)</h1>
     <p>still lost but</p>
     <p>thanks, August</p>
-
+    <img src="https://buzzi-app.s3.amazonaws.com/nft/profiles/profile-butterbeer.png" alt="hihi">
     <div>
         <p class="clock"></p>
         <p>
