--- a/index.html
+++ b/index.html
@@ -145,3 +145,15 @@ priority: 1.0
         {% endfor %}
     </ul>
 </div>
+
+<div class="section">
+    <h2>Common</h2>
+    <ul>
+        {% for common in site.categories.common %}
+        <li>
+            <a href="{{site.baseurl}}{{common.url}}">{{common.title}}</a>
+            <!-- <p>{{common.meta}}</p> -->
+        </li>
+        {% endfor %}
+    </ul>
+</div>
