--- a/index.html
+++ b/index.html
@@ -39,6 +39,18 @@ priority: 1.0
 </div>
 
 <div class="section">
+    <h2>NodeJs</h2>
+    <ul>
+        {% for node in site.categories.node %}
+        <li>
+            <a href="{{site.baseurl}}{{node.url}}">{{node.title}}</a>
+            <!-- <p>{{node.meta}}</p> -->
+        </li>
+        {% endfor %}
+    </ul>
+</div>
+
+<div class="section">
     <h2>Javascript</h2>
     <ul>
         {% for javascript in site.categories.Javascript %}
