--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: home
 pageClass: home-container
 priority: 1.0
 ---
-<div class="section firstSection">
+<div class="section">
     <h2>New Posts</h2>
     <ul>
         {% assign sorted = site.posts | sort: 'date' | reverse %}
