--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ priority: 1.0
 <div class="section">
     <h2>NodeJs</h2>
     <ul>
-        {% for node in site.categories.node %}
+        {% for node in site.categories.NodeJs %}
         <li>
             <a href="{{site.baseurl}}{{node.url}}">{{node.title}}</a>
             <!-- <p>{{node.meta}}</p> -->
@@ -55,7 +55,7 @@ priority: 1.0
 <div class="section">
     <h2>Project</h2>
     <ul>
-        {% for project in site.categories.projects %}
+        {% for project in site.categories.Projects %}
         <li>
             <a href="{{site.baseurl}}{{project.url}}">{{project.title}}</a>
             <!-- <p>{{project.meta}}</p> -->
@@ -67,7 +67,7 @@ priority: 1.0
 <div class="section">
     <h2>First settings</h2>
     <ul>
-        {% for setting in site.categories.setting %}
+        {% for setting in site.categories.Setting %}
         <li>
             <a href="{{site.baseurl}}{{setting.url}}">{{setting.title}}</a>
             <!-- <p>{{setting.meta}}</p> -->
@@ -79,7 +79,7 @@ priority: 1.0
 <div class="section">
     <h2>Git</h2>
     <ul>
-        {% for git in site.categories.git %}
+        {% for git in site.categories.Git %}
         <li>
             <a href="{{site.baseurl}}{{git.url}}">{{git.title}}</a>
             <!-- <p>{{git.meta}}</p> -->
@@ -91,7 +91,7 @@ priority: 1.0
 <div class="section">
     <h2>HTML</h2>
     <ul>
-        {% for html in site.categories.html %}
+        {% for html in site.categories.Html %}
         <li>
             <a href="{{site.baseurl}}{{html.url}}">{{html.title}}</a>
             <!-- <p>{{html.meta}}</p> -->
@@ -103,7 +103,7 @@ priority: 1.0
 <div class="section">
     <h2>css</h2>
     <ul>
-        {% for css in site.categories.css %}
+        {% for css in site.categories.Css %}
         <li>
             <a href="{{site.baseurl}}{{css.url}}">{{css.title}}</a>
             <!-- <p>{{css.meta}}</p> -->
@@ -115,7 +115,7 @@ priority: 1.0
 <div class="section lastSection">
     <h2>Algorithm</h2>
     <ul>
-        {% for algorithm in site.categories.algorithm %}
+        {% for algorithm in site.categories.Algorithm %}
         <li>
             <a href="{{site.baseurl}}{{algorithm.url}}">{{algorithm.title}}</a>
             <!-- <p>{{algorithm.meta}}</p> -->
@@ -127,7 +127,7 @@ priority: 1.0
 <div class="section lastSection">
     <h2>Trouble Shooting</h2>
     <ul>
-        {% for troubleShoot in site.categories.troubleShoot %}
+        {% for troubleShoot in site.categories.TroubleShoot %}
         <li>
             <a href="{{site.baseurl}}{{troubleShoot.url}}">{{troubleShoot.title}}</a>
             <!-- <p>{{troubleShoot.meta}}</p> -->
@@ -139,7 +139,7 @@ priority: 1.0
 <div class="section">
     <h2>Design</h2>
     <ul>
-        {% for design in site.categories.design %}
+        {% for design in site.categories.Design %}
         <li>
             <a href="{{site.baseurl}}{{design.url}}">{{design.title}}</a>
             <!-- <p>{{design.meta}}</p> -->
@@ -151,7 +151,7 @@ priority: 1.0
 <div class="section">
     <h2>Common</h2>
     <ul>
-        {% for common in site.categories.common %}
+        {% for common in site.categories.Common %}
         <li>
             <a href="{{site.baseurl}}{{common.url}}">{{common.title}}</a>
             <!-- <p>{{common.meta}}</p> -->
