--- a/index.html
+++ b/index.html
@@ -22,7 +22,17 @@ priority: 1.0
         {% for react in site.categories.React %}
         <li>
             <a href="{{site.baseurl}}{{react.url}}">{{react.title}}</a>
-            <!-- <p>{{react.meta}}</p> -->
+        </li>
+        {% endfor %}
+    </ul>
+</div>
+
+<div class="section">
+    <h2>Typescript</h2>
+    <ul>
+        {% for typescript in site.categories.Typescript %}
+        <li>
+            <a href="{{site.baseurl}}{{typescript.url}}">{{typescript.title}}</a>
         </li>
         {% endfor %}
     </ul>
@@ -34,7 +44,6 @@ priority: 1.0
         {% for node in site.categories.NodeJs %}
         <li>
             <a href="{{site.baseurl}}{{node.url}}">{{node.title}}</a>
-            <!-- <p>{{node.meta}}</p> -->
         </li>
         {% endfor %}
     </ul>
@@ -46,7 +55,6 @@ priority: 1.0
         {% for javascript in site.categories.Javascript %}
         <li>
             <a href="{{site.baseurl}}{{javascript.url}}">{{javascript.title}}</a>
-            <!-- <p>{{react.meta}}</p> -->
         </li>
         {% endfor %}
     </ul>
@@ -58,7 +66,6 @@ priority: 1.0
         {% for project in site.categories.Projects %}
         <li>
             <a href="{{site.baseurl}}{{project.url}}">{{project.title}}</a>
-            <!-- <p>{{project.meta}}</p> -->
         </li>
         {% endfor %}
     </ul>
@@ -70,7 +77,6 @@ priority: 1.0
         {% for setting in site.categories.Setting %}
         <li>
             <a href="{{site.baseurl}}{{setting.url}}">{{setting.title}}</a>
-            <!-- <p>{{setting.meta}}</p> -->
         </li>
         {% endfor %}
     </ul>
@@ -82,7 +88,6 @@ priority: 1.0
         {% for git in site.categories.Git %}
         <li>
             <a href="{{site.baseurl}}{{git.url}}">{{git.title}}</a>
-            <!-- <p>{{git.meta}}</p> -->
         </li>
         {% endfor %}
     </ul>
@@ -94,7 +99,6 @@ priority: 1.0
         {% for html in site.categories.Html %}
         <li>
             <a href="{{site.baseurl}}{{html.url}}">{{html.title}}</a>
-            <!-- <p>{{html.meta}}</p> -->
         </li>
         {% endfor %}
     </ul>
@@ -106,7 +110,6 @@ priority: 1.0
         {% for css in site.categories.Css %}
         <li>
             <a href="{{site.baseurl}}{{css.url}}">{{css.title}}</a>
-            <!-- <p>{{css.meta}}</p> -->
         </li>
         {% endfor %}
     </ul>
@@ -118,7 +121,6 @@ priority: 1.0
         {% for algorithm in site.categories.Algorithm %}
         <li>
             <a href="{{site.baseurl}}{{algorithm.url}}">{{algorithm.title}}</a>
-            <!-- <p>{{algorithm.meta}}</p> -->
         </li>
         {% endfor %}
     </ul>
@@ -130,7 +132,6 @@ priority: 1.0
         {% for troubleShoot in site.categories.TroubleShoot %}
         <li>
             <a href="{{site.baseurl}}{{troubleShoot.url}}">{{troubleShoot.title}}</a>
-            <!-- <p>{{troubleShoot.meta}}</p> -->
         </li>
         {% endfor %}
     </ul>
@@ -142,7 +143,6 @@ priority: 1.0
         {% for design in site.categories.Design %}
         <li>
             <a href="{{site.baseurl}}{{design.url}}">{{design.title}}</a>
-            <!-- <p>{{design.meta}}</p> -->
         </li>
         {% endfor %}
     </ul>
@@ -154,7 +154,6 @@ priority: 1.0
         {% for common in site.categories.Common %}
         <li>
             <a href="{{site.baseurl}}{{common.url}}">{{common.title}}</a>
-            <!-- <p>{{common.meta}}</p> -->
         </li>
         {% endfor %}
     </ul>
