--- a/index.html
+++ b/index.html
@@ -159,4 +159,4 @@ priority: 1.0
     </ul>
 </div>
 
-<script src="./js/search.js" type="text/javascript"></script>
+<script src="{{site.baseurl}}/js/search.js" type="text/javascript"></script>
