Added: new post and link to github

--- a/test.html
+++ b/test.html
@@ -15,7 +15,7 @@
             width: 100px;
         }
 
-        .spinning{
+        .spinning {
             display: inline-block;
             font-size: 5rem;
         }
@@ -68,6 +68,13 @@
         <input type="checkbox" checked="checked">
         <span class="checkmark"></span>
     </label>
+    <div>
+        <form onclick="alert('form')">FORM
+            <div onclick="alert('div')">DIV
+                <p onclick="alert('p')">P</p>
+            </div>
+        </form>
+    </div>
     <ul>
         <li>
             <a href="https://addyosmani.com/resources/essentialjsdesignpatterns/book/" target="_blank">
@@ -107,16 +114,20 @@
         </li>
         <li><a href="https://developer.mozilla.org/en-US/docs/Learn/JavaScript/Asynchronous/Introducing">Introducing
                 Asynchronous JavaScript</a></li>
-        <li><a href="https://developer.mozilla.org/en-US/docs/Learn/JavaScript/Asynchronous/Timeouts_and_intervals">Timeouts and intervals</a>
+        <li><a href="https://developer.mozilla.org/en-US/docs/Learn/JavaScript/Asynchronous/Timeouts_and_intervals">Timeouts
+                and intervals</a>
         </li>
         <li>
             API
-            <ul> 
+            <ul>
                 <li><a href="https://developers.google.com/maps/documentation/geocoding/start">google map</a></li>
-                <li><a href="https://developers.google.com/identity/protocols/oauth2/service-account">google OAuth 2.0</a></li>
-                <li><a href="https://developers.facebook.com/docs/messenger-platform/reference/send-api">Facebook Social Graph API</a></li>
+                <li><a href="https://developers.google.com/identity/protocols/oauth2/service-account">google OAuth
+                        2.0</a></li>
+                <li><a href="https://developers.facebook.com/docs/messenger-platform/reference/send-api">Facebook Social
+                        Graph API</a></li>
                 <li><a href="https://developer.spotify.com/documentation/web-api/">Spotify Music Web API</a></li>
-                <li><a href="https://docs.microsoft.com/en-us/linkedin/shared/integrations/people/profile-api">LinkedIn Profile API</a></li>
+                <li><a href="https://docs.microsoft.com/en-us/linkedin/shared/integrations/people/profile-api">LinkedIn
+                        Profile API</a></li>
             </ul>
         </li>
         <li>
