--- a/test.html
+++ b/test.html
@@ -263,6 +263,17 @@
 
         draw(400);
 
+        for (let i = 1; i <= 9; i++) {
+            for (let j = 1; j <= 9; j++) {
+                if (j !== 4) {
+                    console.log(`${i}x${j}=${i * j}`);
+                    if (i === 5 && j === 9) {
+                        console.log("(빈줄)")
+                    }
+                }
+
+            }
+        }
     </script>
 </body>
 
