--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ pageClass: home-container
 priority: 1.0
 ---
 <div class="section">
-    <h2 class="section-title">New Posts</h2>
+    <h2>New Posts</h2>
     <ul>
         {% assign sorted = site.posts | sort: 'date' | reverse %}
         {% for item in sorted limit: 5 %}
@@ -17,29 +17,18 @@ priority: 1.0
 </div>
 
 <div class="section">
-    <h2 class="section-title">React</h2>
+    <h2>Vue</h2>
     <ul>
-        {% for react in site.categories.react %}
+        {% for vue in site.categories.vue %}
         <li>
-            <a href="{{site.baseurl}}{{react.url}}">{{react.title}}</a>
+            <a href="{{site.baseurl}}{{vue.url}}">{{vue.title}}</a>
         </li>
         {% endfor %}
     </ul>
 </div>
 
 <div class="section">
-    <h2 class="section-title">NextJs</h2>
-    <ul>
-        {% for nextjs in site.categories.nextjs %}
-        <li>
-            <a href="{{site.baseurl}}{{nextjs.url}}">{{nextjs.title}}</a>
-        </li>
-        {% endfor %}
-    </ul>
-</div>
-
-<div class="section">
-    <h2 class="section-title">Typescript</h2>
+    <h2>Typescript</h2>
     <ul>
         {% for typescript in site.categories.typescript %}
         <li>
@@ -50,7 +39,7 @@ priority: 1.0
 </div>
 
 <div class="section">
-    <h2 class="section-title">NodeJs</h2>
+    <h2>NodeJs</h2>
     <ul>
         {% for node in site.categories.nodejs %}
         <li>
@@ -61,7 +50,7 @@ priority: 1.0
 </div>
 
 <div class="section">
-    <h2 class="section-title">Javascript</h2>
+    <h2>Javascript</h2>
     <ul>
         {% for javascript in site.categories.javascript %}
         <li>
@@ -72,40 +61,7 @@ priority: 1.0
 </div>
 
 <div class="section">
-    <h2 class="section-title">Project</h2>
-    <ul>
-        {% for project in site.categories.projects %}
-        <li>
-            <a href="{{site.baseurl}}{{project.url}}">{{project.title}}</a>
-        </li>
-        {% endfor %}
-    </ul>
-</div>
-
-<div class="section">
-    <h2 class="section-title">First settings</h2>
-    <ul>
-        {% for setting in site.categories.setting %}
-        <li>
-            <a href="{{site.baseurl}}{{setting.url}}">{{setting.title}}</a>
-        </li>
-        {% endfor %}
-    </ul>
-</div>
-
-<div class="section">
-    <h2 class="section-title">Git</h2>
-    <ul>
-        {% for git in site.categories.git %}
-        <li>
-            <a href="{{site.baseurl}}{{git.url}}">{{git.title}}</a>
-        </li>
-        {% endfor %}
-    </ul>
-</div>
-
-<div class="section">
-    <h2 class="section-title">HTML</h2>
+    <h2>HTML</h2>
     <ul>
         {% for html in site.categories.html %}
         <li>
@@ -116,7 +72,7 @@ priority: 1.0
 </div>
 
 <div class="section">
-    <h2 class="section-title">css</h2>
+    <h2>css</h2>
     <ul>
         {% for css in site.categories.css %}
         <li>
@@ -126,8 +82,43 @@ priority: 1.0
     </ul>
 </div>
 
+<div class="section">
+    <h2>Project</h2>
+    <ul>
+        {% for project in site.categories.projects %}
+        <li>
+            <a href="{{site.baseurl}}{{project.url}}">{{project.title}}</a>
+        </li>
+        {% endfor %}
+    </ul>
+</div>
+
+<div class="section">
+    <h2>First settings</h2>
+    <ul>
+        {% for setting in site.categories.setting %}
+        <li>
+            <a href="{{site.baseurl}}{{setting.url}}">{{setting.title}}</a>
+        </li>
+        {% endfor %}
+    </ul>
+</div>
+
+<div class="section">
+    <h2>Git</h2>
+    <ul>
+        {% for git in site.categories.git %}
+        <li>
+            <a href="{{site.baseurl}}{{git.url}}">{{git.title}}</a>
+        </li>
+        {% endfor %}
+    </ul>
+</div>
+
+
+
 <div class="section lastSection">
-    <h2 class="section-title">Algorithm</h2>
+    <h2>Algorithm</h2>
     <ul>
         {% for algorithm in site.categories.algorithm %}
         <li>
@@ -138,7 +129,7 @@ priority: 1.0
 </div>
 
 <div class="section lastSection">
-    <h2 class="section-title">Trouble Shooting</h2>
+    <h2>Trouble Shooting</h2>
     <ul>
         {% for troubleShoot in site.categories.troubleshoots %}
         <li>
@@ -149,18 +140,33 @@ priority: 1.0
 </div>
 
 <div class="section">
-    <h2 class="section-title">Design</h2>
-    <ul>
-        {% for design in site.categories.design %}
-        <li>
-            <a href="{{site.baseurl}}{{design.url}}">{{design.title}}</a>
-        </li>
-        {% endfor %}
-    </ul>
+    <details>
+        <summary class="section-title">React</summary>
+        <ul>
+            {% for react in site.categories.react %}
+            <li>
+                <a href="{{site.baseurl}}{{react.url}}">{{react.title}}</a>
+            </li>
+            {% endfor %}
+        </ul>
+    </details>
 </div>
 
 <div class="section">
-    <h2 class="section-title">Common</h2>
+    <details>
+        <summary class="section-title">NextJs</summary>
+        <ul>
+            {% for nextjs in site.categories.nextjs %}
+            <li>
+                <a href="{{site.baseurl}}{{nextjs.url}}">{{nextjs.title}}</a>
+            </li>
+            {% endfor %}
+        </ul>
+    </details>
+</div>
+
+<div class="section">
+    <h2>Common</h2>
     <ul>
         {% for common in site.categories.common %}
         <li>
@@ -170,3 +176,13 @@ priority: 1.0
     </ul>
 </div>
 
+<div class="section">
+    <h2>Design</h2>
+    <ul>
+        {% for design in site.categories.design %}
+        <li>
+            <a href="{{site.baseurl}}{{design.url}}">{{design.title}}</a>
+        </li>
+        {% endfor %}
+    </ul>
+</div>
